# chesstack_refactoring

./: .gitignore  CMakeLists.txt  build_windows.ps1  rule.md
docs/: BOT_README.md  evaluation_templates.md  how_to_add_variant_piece.md  how_to_build.md
engine/: chess.hpp  enum.hpp  gameboard.cpp  piece_setting.cpp
py/: adapter.py  bot.py  bot_test.py  example.py  legacy_bots.py  play.py
py/ui/: bot_manager.py  constants.py  input_handler.py  menu.py  render.py  state.py
python_bind/: python_chess.cpp
src/bot_cpp/: agent.hpp  eval_equation.md  minimax.cpp  minimax_gpt.cpp
src/engine/: chess.hpp  debug.cpp  enum.hpp  gameboard.cpp  piece_setting.cpp  piece_spec.cpp  piece_spec.hpp
test/: test.cpp  test_bot.cpp  test_bot_line.cpp  test_get_calc_info.cpp
